# vision

./: .gitignore  CHANGELOG.md  INSTALL.md  README.md  docker-compose.builder.yml  docker-compose.full.yml  docker-compose.openvino.yml  docker-compose.runner.yml  plan.md  vision.bat  vision.ps1
backend/: .dockerignore  .gitignore  Dockerfile.builder  Dockerfile.runner  Dockerfile.runner.openvino  README.md  requirements.openvino.txt  requirements.txt
backend/app/: bootstrap.py  main.py  middleware.py  watcher.py
backend/app/api/: dataset_routes.py  dataset_schema.py  routes.py  schema.py  training_routes.py  training_schema.py  video_routes.py  video_schema.py
backend/app/inference/: engine.py  image_export.py  ort.py  preprocess.py  privacy.py  video.py  video_render.py
backend/app/integrations/: mqtt_client.py  opcua_callbacks.py  opcua_server.py  webhook.py
backend/app/training/: worker.py
backend/scripts/: export_ultralytics_yolo_to_onnx.py  privacy_smoke_test.py  pull_model_bundle.py
backend/tests/: opcua_test.py
docs/: 40100.md  INTEGRATIONS.md
frontend/: Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: ExportMenu.tsx  FilterSelector.tsx  I18nProvider.tsx  Toast.tsx  (+9 more)
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/vision_mcp/: __init__.py  __main__.py  client.py
models/: filters.json
mosquitto/data/: mosquitto.db
output/: bus.detections.json
scripts/: smoke-test.ps1
(+12 files in other folders)
