[project]
name = "vision-mcp"
version = "1.2.0"
description = "MCP Server for Vision AI object detection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vision-mcp = "vision_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
